[package]
name = "key-value-db"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
kv = { version = "0.23.1", features = ["json-value"] }
lazy_static = "1.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
